feat: Реализация микросервисной архитектуры по задания 2 этапа